# cargo-workspace-template

./: .dockerignore  .gitignore  Cargo.toml  rustfmt.toml
.cargo/: config.toml
crates/libs/demo/: Cargo.toml
